display bookings on modal

--- a/client/package.json
+++ b/client/package.json
@@ -33,10 +33,12 @@
     "@ember/test-helpers": "^3.2.1",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
+    "bootstrap": "^5.0.0",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^8.2.2",
     "ember-apollo-client": "^4.1.1",
     "ember-auto-import": "^2.7.2",
+    "ember-bootstrap": "^6.5.0",
     "ember-cli": "~5.5.0",
     "ember-cli-app-version": "^6.0.1",
     "ember-cli-babel": "^8.2.0",
@@ -78,5 +80,6 @@
   },
   "ember": {
     "edition": "octane"
-  }
+  },
+  "dependencies": {}
 }
